--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,66 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app"/>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <link rel="icon" type="image/png" href="assets/img/favicon.svg" />
+    <!-- Bootstrap css cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <title>Examee</title>
 
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="NewExamee – Learn Smart, Succeed Faster">
-  <meta name="twitter:description"
-    content="NewExamee provides curated online courses, study materials, and academic tools to accelerate your learning journey.">
-
-  <!-- Open Graph (Facebook & others) -->
-  <meta property="og:title" content="NewExamee – Your Smart Learning Companion">
-  <meta property="og:description"
-    content="Discover powerful learning with NewExamee – Notes, PYQs, videos & courses designed to help students master academics with ease.">
-  <meta property="og:url" content="https://newexamee.netlify.app/">
-  <meta property="og:type" content="website">
-
-  <!-- General SEO Meta Tags -->
-  <meta name="description"
-    content="NewExamee is an educational platform offering smart courses, notes, videos, and exam resources to help students learn effectively. Find curated content for school, college, and competitive exams.">
-  <meta name="keywords"
-    content="NewExamee, online learning, study platform, smart education, exam prep, notes, video lectures, previous year papers, PYQs, student platform, learning website, education tech, e-learning, online classes, academic resources, student support tools">
-  <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://newexamee.netlify.app/">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/assets/img/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg" href="/assets/img/favicon.svg" />
-  <link rel="shortcut icon" href="/assets/img/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Examee" />
-  <link rel="manifest" href="/assets/img/site.webmanifest" />
-
-
-  <!-- Bootstrap css cdn -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-    rel="stylesheet">
-  <title>Examee</title>
-
-</head>
-
-<body>
-  <div id="root"></div>
+  </head>
+  <body>
+    <div id="root"></div>
 
 
 
-  <!-- Fontawesome script file -->
-  <script src="https://kit.fontawesome.com/a10ad7dd4d.js" crossorigin="anonymous"></script>
+     <!-- Fontawesome script file -->
+     <script src="https://kit.fontawesome.com/a10ad7dd4d.js" crossorigin="anonymous"></script>
 
-  <!-- bootstrap script cdn -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-</body>
-
+     <!-- bootstrap script cdn -->
+     <script
+     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+     crossorigin="anonymous"></script>
+  </body>
 </html>
