--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,19 +35,22 @@
   <link rel="manifest" href="/assets/img/site.webmanifest" />
 
 
-    <!-- Bootstrap css cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
-    <title>Examee</title>
+  <!-- Bootstrap css cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <title>Examee</title>
 
-  </head>
-  <body>
-    <div id="root"></div>
+</head>
 
-     <!-- Fontawesome script file -->
-     <script src="https://kit.fontawesome.com/a10ad7dd4d.js" crossorigin="anonymous"></script>
-     <!-- bootstrap script cdn -->
-     <script
-     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-     crossorigin="anonymous"></script>
-  </body>
+<body>
+  <div id="root"></div>
+
+  <!-- Fontawesome script file -->
+  <script src="https://kit.fontawesome.com/a10ad7dd4d.js" crossorigin="anonymous"></script>
+  <!-- bootstrap script cdn -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
