--- a/Static/index.html
+++ b/Static/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Static Navbar</title>
+  <title>Examee</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -22,7 +22,7 @@
   <nav class="navbar sticky-top navbar-expand-lg shadow-sm nav-color">
     <div class="container-fluid fs-6">
       <ul class="d-flex flex-row align-items-center mb-0 pl-0 list-unstyled">
-        <a class="nav-text navbar-brand mt-0" href="https://newexamee.netlify.app">
+        <a class="nav-text navbar-brand mt-0" href="https://examee.netlify.app">
           <img src="assets/img/brandlog.png" alt="Examee" style="width: 110px;" />
         </a>
       </ul>
@@ -43,9 +43,9 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="categoryDropdown">
               <li><a class="dropdown-item"
-                  href="https://newexamee.netlify.app/?category=sciTechnology">Sci-Technology</a></li>
-              <li><a class="dropdown-item" href="https://newexamee.netlify.app/?category=commerce">Commerce</a></li>
-              <li><a class="dropdown-item" href="https://newexamee.netlify.app/?category=artscivils">Arts & Civils</a>
+                  href="https://examee.netlify.app/?category=sciTechnology">Sci-Technology</a></li>
+              <li><a class="dropdown-item" href="https://examee.netlify.app/?category=commerce">Commerce</a></li>
+              <li><a class="dropdown-item" href="https://examee.netlify.app/?category=artscivils">Arts & Civils</a>
               </li>
             </ul>
           </li>
@@ -53,29 +53,21 @@
 
         <ul class="navbar-nav ms-auto d-flex align-items-center">
           <li class="nav-item dropdown">
-            <a class="nav-link" href="https://newexamee.netlify.app" role="button" data-bs-toggle="dropdown">
+            <a class="nav-link" href="https://examee.netlify.app" role="button" data-bs-toggle="dropdown">
               <img src="assets/img/Avtar.jpg" alt="Avatar" class="profile-img rounded-circle" />
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="https://newexamee.netlify.app/myLearning">My Learning</a></li>
-              <li><a class="dropdown-item" href="https://newexamee.netlify.app/profile">View Profile</a></li>
-              <!-- <li>
-                <hr class="dropdown-divider d-none" id="logoutNav" />
-              </li>
-              <li>
-                <a class="dropdown-item text-danger d-none" id="logoutNav" href="https://newexamee.netlify.app"
-                  onclick="handleLogout()">Logout <i class="fa-solid fa-arrow-right-from-bracket"></i>
-                </a>
-              </li> -->
+              <li><a class="dropdown-item" href="https://examee.netlify.app/myLearning">My Learning</a></li>
+              <li><a class="dropdown-item" href="https://examee.netlify.app/profile">View Profile</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a class="nav-text nav-link" href="https://newexamee.netlify.app/notes">Notes</a></li>
-          <li class="nav-item"><a class="nav-text nav-link" href="https://newexamee.netlify.app/video">Video</a></li>
-          <li class="nav-item"><a class="nav-text nav-link" href="https://newexamee.netlify.app/Q-paper">Q-Paper</a>
+          <li class="nav-item"><a class="nav-text nav-link" href="https://examee.netlify.app/notes">Notes</a></li>
+          <li class="nav-item"><a class="nav-text nav-link" href="https://examee.netlify.app/video">Video</a></li>
+          <li class="nav-item"><a class="nav-text nav-link" href="https://examee.netlify.app/Q-paper">Q-Paper</a>
           </li>
-          <li class="nav-item"><a class="nav-text nav-link" href="https://newexamee.netlify.app/cource">Course</a></li>
-          <li class="nav-item"><a class="nav-text nav-link" href="https://newexamee.netlify.app/about">About</a></li>
-          <li class="nav-item"><a class="nav-text nav-link" href="https://newexamee.netlify.app/contact">Support</a>
+          <li class="nav-item"><a class="nav-text nav-link" href="https://examee.netlify.app/cource">Course</a></li>
+          <li class="nav-item"><a class="nav-text nav-link" href="https://examee.netlify.app/about">About</a></li>
+          <li class="nav-item"><a class="nav-text nav-link" href="https://examee.netlify.app/contact">Support</a>
           </li>
         </ul>
       </div>
@@ -87,28 +79,28 @@
     <div class="MobileBar p-2 d-none" id="mobileMenu">
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="https://newexamee.netlify.app" data-bs-toggle="dropdown">
+          <a class="nav-link dropdown-toggle" href="https://examee.netlify.app" data-bs-toggle="dropdown">
             <i class="fa-solid fa-layer-group mx-2"></i>Category
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://newexamee.netlify.app/?category=sciTechnology">Sci-Technology</a>
+            <li><a class="dropdown-item" href="https://examee.netlify.app/?category=sciTechnology">Sci-Technology</a>
             </li>
-            <li><a class="dropdown-item" href="https://newexamee.netlify.app/?category=commerce">Commerce</a></li>
-            <li><a class="dropdown-item" href="https://newexamee.netlify.app/?category=artscivils">Arts & Civils</a>
+            <li><a class="dropdown-item" href="https://examee.netlify.app/?category=commerce">Commerce</a></li>
+            <li><a class="dropdown-item" href="https://examee.netlify.app/?category=artscivils">Arts & Civils</a>
             </li>
           </ul>
         </li>
-        <li class="nav-item"><a class="nav-link" href="https://newexamee.netlify.app/notes"><i
+        <li class="nav-item"><a class="nav-link" href="https://examee.netlify.app/notes"><i
               class="fa-solid fa-note-sticky mx-2"></i>Notes</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://newexamee.netlify.app/video"><i
+        <li class="nav-item"><a class="nav-link" href="https://examee.netlify.app/video"><i
               class="fa-solid fa-photo-film mx-2"></i>Video</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://newexamee.netlify.app/Q-paper"><i
+        <li class="nav-item"><a class="nav-link" href="https://examee.netlify.app/Q-paper"><i
               class="fa-regular fa-paste mx-2"></i>Q-Paper</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://newexamee.netlify.app/cource"><i
+        <li class="nav-item"><a class="nav-link" href="https://examee.netlify.app/cource"><i
               class="fa-solid fa-laptop mx-2"></i>Course</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://newexamee.netlify.app/about"><i
+        <li class="nav-item"><a class="nav-link" href="https://examee.netlify.app/about"><i
               class="fa-regular fa-paste mx-2"></i>About</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://newexamee.netlify.app/contact"><i
+        <li class="nav-item"><a class="nav-link" href="https://examee.netlify.app/contact"><i
               class="fas fa-file-alt mx-2"></i>Support</a></li>
       </ul>
     </div>
@@ -139,12 +131,6 @@
           </form>
 
           <!-- Buttons -->
-          <!-- <div class="d-flex my-4 gap-2 justify-content-center justify-content-md-start d-none" id="loginNav">
-            <a class="nav-link" href="https://newexamee.netlify.app/login"><button type="button"
-                class="btn btn-green px-4 rounded-3">Login</button></a>
-            <a class="nav-link" href="https://newexamee.netlify.app/register"><button type="button"
-                class="btn btn-green px-4 rounded-3">Register</button></a>
-          </div> -->
           <div class="mt-3 d-flex gap-2">
             <button class="btn btn-sm shadow-sm btn-dark">Notes</button>
             <button class="btn btn-sm shadow-sm btn-white">PYQ</button>
@@ -211,7 +197,7 @@
     </div>
 
     <div class="d-flex justify-content-center">
-      <a href="https://newexamee.netlify.app/cource">
+      <a href="https://examee.netlify.app/cource">
         <button class="btn btn-dark px-5 py-2 mt-5">View All Courses</button>
       </a>
     </div>
@@ -464,7 +450,7 @@
                   <li class="mb-2"><i class="fa-solid mx-3 green-i fa-check"></i>Email Support</li>
                   <li class="mb-2"><i class="fa-solid mx-3 green-i fa-check"></i>1- Chat per day</li>
                 </ul>
-                <a href="https://newexamee.netlify.app"><button class="btn btn-primary w-100">Get Started</button></a>
+                <a href="https://examee.netlify.app"><button class="btn btn-primary w-100">Get Started</button></a>
               </div>
             </div>
           </div>
@@ -486,7 +472,7 @@
                   <li class="mb-2"><i class="fa-solid mx-3 green-i fa-check"></i>Priority Support</li>
                   <li class="mb-2"><i class="fa-solid mx-3 green-i fa-check"></i>Live Sessions</li>
                 </ul>
-                <a href="https://newexamee.netlify.app"><button class="btn btn-primary w-100">Get Started</button></a>
+                <a href="https://examee.netlify.app"><button class="btn btn-primary w-100">Get Started</button></a>
               </div>
             </div>
           </div>
@@ -505,7 +491,7 @@
                   <li class="mb-2"><i class="fa-solid mx-3 green-i fa-check"></i>Custom Study Plan</li>
                   <li class="mb-2"><i class="fa-solid mx-3 green-i fa-check"></i>Certificate</li>
                 </ul>
-                <a href="https://newexamee.netlify.app"><button class="btn btn-primary w-100">Get Started</button></a>
+                <a href="https://examee.netlify.app"><button class="btn btn-primary w-100">Get Started</button></a>
               </div>
             </div>
           </div>
@@ -534,13 +520,13 @@
               <div class="col-md-6 my-3">
                 <h5 class="mb-3">Quick Links</h5>
                 <ul class="list-unstyled">
-                  <li><a href="https://newexamee.netlify.app" class="nav-link cursor-pointer my-2">Home</a></li>
-                  <li><a href="https://newexamee.netlify.app/about" class="nav-link cursor-pointer my-2">About Us</a>
+                  <li><a href="https://examee.netlify.app" class="nav-link cursor-pointer my-2">Home</a></li>
+                  <li><a href="https://examee.netlify.app/about" class="nav-link cursor-pointer my-2">About Us</a>
                   </li>
-                  <li><a href="https://newexamee.netlify.app/cource" class="nav-link cursor-pointer my-2">Courses</a>
+                  <li><a href="https://examee.netlify.app/cource" class="nav-link cursor-pointer my-2">Courses</a>
                   </li>
-                  <li><a href="https://newexamee.netlify.app/notes" class="nav-link cursor-pointer my-2">Notes</a></li>
-                  <li><a href="https://newexamee.netlify.app/contact" class="nav-link cursor-pointer my-2">Contact</a>
+                  <li><a href="https://examee.netlify.app/notes" class="nav-link cursor-pointer my-2">Notes</a></li>
+                  <li><a href="https://examee.netlify.app/contact" class="nav-link cursor-pointer my-2">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -557,15 +543,15 @@
               <div class="col-md-6 my-3">
                 <h5 class="mb-3">Our Courses</h5>
                 <ul class="list-unstyled">
-                  <li><a href="https://newexamee.netlify.app/cource"
+                  <li><a href="https://examee.netlify.app/cource"
                       class="nav-link cursor-pointer my-2">Sci-Technology</a></li>
-                  <li><a href="https://newexamee.netlify.app/cource" class="nav-link cursor-pointer my-2">Commerce</a>
+                  <li><a href="https://examee.netlify.app/cource" class="nav-link cursor-pointer my-2">Commerce</a>
                   </li>
-                  <li><a href="https://newexamee.netlify.app/cource" class="nav-link cursor-pointer my-2">Arts &
+                  <li><a href="https://examee.netlify.app/cource" class="nav-link cursor-pointer my-2">Arts &
                       Civils</a></li>
-                  <li><a href="https://newexamee.netlify.app/Q-paper" class="nav-link cursor-pointer my-2">Previous
+                  <li><a href="https://examee.netlify.app/Q-paper" class="nav-link cursor-pointer my-2">Previous
                       Papers</a></li>
-                  <li><a href="https://newexamee.netlify.app/video" class="nav-link cursor-pointer my-2">Video
+                  <li><a href="https://examee.netlify.app/video" class="nav-link cursor-pointer my-2">Video
                       Lectures</a></li>
                 </ul>
               </div>
@@ -692,7 +678,7 @@
                 <p class="card-text px-0">
                   <span>Course Content: ${course.courseContents.slice(0, 50)}...</span>
                 </p>
-                <a href="https://newexamee.netlify.app/cource">
+                <a href="https://examee.netlify.app/cource">
                 <button class="btn btn-info text-white fw-bold col-12 m-0">
                   Enroll Now
                 </button>
@@ -724,7 +710,7 @@
     // Optional logout function
     function handleLogout() {
       localStorage.removeItem("token");
-      window.location.href = "https://newexamee.netlify.app"; // Redirect to home
+      window.location.href = "https://examee.netlify.app"; // Redirect to home
     }
 
   </script>
