--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,8 @@
   <link rel="canonical" href="https://examee.netlify.app/">
 
   <!-- Favicon -->
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="/assets/img/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/img/favicon.svg" />
   <link rel="shortcut icon" href="/assets/img/favicon.ico" />
