rplase newexamee word with examee

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,22 +8,22 @@
   <link rel="icon" href="/assets/img/favicon.ico">
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="NewExamee – Learn Smart, Succeed Faster">
+  <meta name="twitter:title" content="Examee – Learn Smart, Succeed Faster">
   <meta name="twitter:description"
-    content="NewExamee provides curated online courses, study materials, and academic tools to accelerate your learning journey.">
+    content="Examee provides curated online courses, study materials, and academic tools to accelerate your learning journey.">
 
   <!-- Open Graph (Facebook & others) -->
-  <meta property="og:title" content="NewExamee – Your Smart Learning Companion">
+  <meta property="og:title" content="Examee – Your Smart Learning Companion">
   <meta property="og:description"
-    content="Discover powerful learning with NewExamee – Notes, PYQs, videos & courses designed to help students master academics with ease.">
+    content="Discover powerful learning with Examee – Notes, PYQs, videos & courses designed to help students master academics with ease.">
   <meta property="og:url" content="https://examee.netlify.app/">
   <meta property="og:type" content="website">
 
   <!-- General SEO Meta Tags -->
   <meta name="description"
-    content="NewExamee is an educational platform offering smart courses, notes, videos, and exam resources to help students learn effectively. Find curated content for school, college, and competitive exams.">
+    content="Examee is an educational platform offering smart courses, notes, videos, and exam resources to help students learn effectively. Find curated content for school, college, and competitive exams.">
   <meta name="keywords"
-    content="NewExamee, online learning, study platform, smart education, exam prep, notes, video lectures, previous year papers, PYQs, student platform, learning website, education tech, e-learning, online classes, academic resources, student support tools">
+    content="Examee, online learning, study platform, smart education, exam prep, notes, video lectures, previous year papers, PYQs, student platform, learning website, education tech, e-learning, online classes, academic resources, student support tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://examee.netlify.app/">
 
